author:
    Taylor Fausak
build-type:
    Simple
cabal-version:
    >= 1.18
--category: TODO
copyright:
    2014 Taylor Fausak <taylor@fausak.me>
--description: TODO
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
license-file:
    LICENSE.txt
license:
    MIT
maintainer:
    taylor@fausak.me
name:
    h2048
--synopsis: TODO
version:
    0.0.0

flag documentation
    default:
        False

library
    build-depends:
        base
    default-language:
        Haskell2010
    exposed-modules:
        H2048
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library

    if flag(documentation)
        build-depends:
            hscolour == 1.*

executable h2048
    build-depends:
        base
      , h2048
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        executable
    main-is:
        Main.hs

test-suite hspec
    build-depends:
        base
      , h2048
      , hspec == 1.*
      , HUnit
      , QuickCheck
    default-language:
        Haskell2010
    ghc-options:
        -fhpc
        -Wall
        -Werror
    hs-source-dirs:
        library
        test-suite
    main-is:
        Spec.hs
    other-modules:
        H2048
        H2048.Tile
        H2048.Vector
        H2048.Grid
        H2048.Direction
        H2048.Point
        -- HASKELETON: New.Module
        H2048Spec
        H2048.TileSpec
        H2048.VectorSpec
        H2048.GridSpec
        H2048.DirectionSpec
        H2048.PointSpec
        -- HASKELETON: New.ModuleSpec
    type:
        exitcode-stdio-1.0

test-suite doctest
    build-depends:
        base
      , Glob == 0.*
      , doctest == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        DocTest.hs
    type:
        exitcode-stdio-1.0

test-suite hpc
    build-depends:
        base
      , process == 1.*
      , regex-compat == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HPC.hs
    type:
        exitcode-stdio-1.0

test-suite haddock
    build-depends:
        base
      , process == 1.*
      , regex-compat == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        Haddock.hs
    type:
        exitcode-stdio-1.0

test-suite hlint
    build-depends:
        base
      , hlint == 1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HLint.hs
    type:
        exitcode-stdio-1.0

benchmark benchmarks
    build-depends:
        base
      , h2048
      , criterion == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        benchmark
    main-is:
        Bench.hs
    type:
        exitcode-stdio-1.0
