author:
    Taylor Fausak
bug-reports:
    https://github.com/tfausak/h2048/issues
build-type:
    Simple
cabal-version:
    >= 1.18
category:
    Game
copyright:
    2014 Taylor Fausak <taylor@fausak.me>
--description: TODO
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
homepage:
    https://github.com/tfausak/h2048
license-file:
    LICENSE.txt
license:
    MIT
maintainer:
    taylor@fausak.me
name:
    h2048
synopsis:
    A 2048 clone in Haskell.
tested-with:
    GHC == 7.6.3
version:
    0.0.0

source-repository head
    location:
        git://github.com/tfausak/threase.git
    type:
        git

flag documentation
    default:
        False

library
    build-depends:
        base
      , random == 1.*
    default-language:
        Haskell2010
    exposed-modules:
        H2048
        H2048.Board
        H2048.Direction
        H2048.Game
        H2048.Main
        H2048.Point
        H2048.Settings
        H2048.Tile
        H2048.Vector
        H2048.Renderer
        -- HASKELETON: New.Module
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library

    if flag(documentation)
        build-depends:
            hscolour == 1.*

executable h2048
    build-depends:
        base
      , h2048
      , random == 1.*
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        executable
    main-is:
        Main.hs

test-suite hspec
    build-depends:
        base
      , h2048
      , hspec == 1.*
          , HUnit
          , QuickCheck
      , random == 1.*
    default-language:
        Haskell2010
    ghc-options:
        -fhpc
        -Wall
        -Werror
    hs-source-dirs:
        library
        test-suite
    main-is:
        Spec.hs
    other-modules:
        H2048
        H2048.Tile
        H2048.Vector
        H2048.Board
        H2048.Direction
        H2048.Point
        H2048.Game
        H2048.Settings
        H2048.Main
        H2048.Renderer
        -- HASKELETON: New.Module
        H2048Spec
        H2048.TileSpec
        H2048.VectorSpec
        H2048.BoardSpec
        H2048.DirectionSpec
        H2048.PointSpec
        H2048.GameSpec
        H2048.SettingsSpec
        H2048.MainSpec
        H2048.RendererSpec
        -- HASKELETON: New.ModuleSpec
    type:
        exitcode-stdio-1.0

test-suite doctest
    build-depends:
        base
      , Glob == 0.*
      , doctest == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        DocTest.hs
    type:
        exitcode-stdio-1.0

test-suite hpc
    build-depends:
        base
      , process == 1.*
      , regex-compat == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HPC.hs
    type:
        exitcode-stdio-1.0

test-suite haddock
    build-depends:
        base
      , process == 1.*
      , regex-compat == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        Haddock.hs
    type:
        exitcode-stdio-1.0

test-suite hlint
    build-depends:
        base
      , hlint == 1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HLint.hs
    type:
        exitcode-stdio-1.0

benchmark benchmarks
    build-depends:
        base
      , h2048
      , criterion == 0.6.*
          , statistics < 0.11
      , random == 1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        benchmark
    main-is:
        Bench.hs
    type:
        exitcode-stdio-1.0
