author:
    Taylor Fausak
bug-reports:
    https://github.com/tfausak/hs2048/issues
build-type:
    Simple
cabal-version:
    >= 1.18
category:
    Game
copyright:
    2014 Taylor Fausak <taylor@fausak.me>
description:
    A <https://github.com/gabrielecirulli/2048 2048> clone in Haskell.
    .
    This implements the game logic as well as a console interface for playing
    it.
extra-source-files:
    CHANGELOG.md
    README.md
homepage:
    https://github.com/tfausak/hs2048
license-file:
    LICENSE.md
license:
    MIT
maintainer:
    taylor@fausak.me
name:
    hs2048
synopsis:
    A 2048 clone in Haskell.
tested-with:
    GHC == 7.6.3
version:
    0.1.0

source-repository head
    location:
        git://github.com/tfausak/hs2048.git
    type:
        git

library
    build-depends:
        base < 5
      , random == 1.*
    default-language:
        Haskell2010
    exposed-modules:
        Hs2048
        Hs2048.AI
        Hs2048.Board
        Hs2048.Direction
        Hs2048.Game
        Hs2048.Main
        Hs2048.Point
        Hs2048.Renderer
        Hs2048.Settings
        Hs2048.Tile
        Hs2048.Vector
    hs-source-dirs:
        library

executable hs2048
    build-depends:
        base < 5
      , hs2048
      , random == 1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        executable
    main-is:
        Main.hs

test-suite hspec
    build-depends:
        base < 5
      , hs2048
      , hspec == 2.2.*
          , HUnit
          , QuickCheck
      , random == 1.*
    default-language:
        Haskell2010
    ghc-options:
        -Wall
    hs-source-dirs:
        library
        test-suite
    main-is:
        Spec.hs
    other-modules:
        Hs2048
        Hs2048.AI
        Hs2048.Board
        Hs2048.Direction
        Hs2048.Game
        Hs2048.Main
        Hs2048.Point
        Hs2048.Renderer
        Hs2048.Settings
        Hs2048.Tile
        Hs2048.Vector
        Hs2048.AISpec
        Hs2048.BoardSpec
        Hs2048.DirectionSpec
        Hs2048.GameSpec
        Hs2048.MainSpec
        Hs2048.PointSpec
        Hs2048.RendererSpec
        Hs2048.SettingsSpec
        Hs2048.TileSpec
        Hs2048.VectorSpec
        Hs2048Spec
    type:
        exitcode-stdio-1.0

benchmark benchmarks
    build-depends:
        base < 5
      , hs2048
      , criterion == 1.1.*
      , random == 1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        benchmark
    main-is:
        Bench.hs
    type:
        exitcode-stdio-1.0
    other-modules:
        Hs2048Bench
        Hs2048.AIBench
        Hs2048.BoardBench
        Hs2048.DirectionBench
        Hs2048.GameBench
        Hs2048.MainBench
        Hs2048.PointBench
        Hs2048.RendererBench
        Hs2048.SettingsBench
        Hs2048.TileBench
        Hs2048.VectorBench
